--- a/SharedAccounts.API/SharedAccounts.API.csproj
+++ b/SharedAccounts.API/SharedAccounts.API.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <!-- <UserSecretsId>b7d355c7-6699-4a3a-84c1-73666f147595</UserSecretsId> -->
   </PropertyGroup>
   <ItemGroup>
   </ItemGroup>
@@ -12,5 +11,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
   </ItemGroup>
 </Project>
