Photo upload (Cloudinary)

--- a/SharedAccounts.API/appsettings.json
+++ b/SharedAccounts.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"     
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dblma7a4a",
+    "ApiKey": "252949597987614",
+    "ApiSecret": "od6RsIE3HhCGWixAR8mvivuaq3U"
+  }
 }
